--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-cffi==1.14.6
-numpy==1.21.2
-pycparser==2.20
-tcod==12.7.3
-typing-extensions==3.10.0.2
+cffi
+numpy
+pycparser
+tcod
+typing-extensions
